Added CC-BY-SA 4.0 license declaration.
I have added the [CC-BY-SA 4.0 license](http://creativecommons.org/licenses/by-sa/4.0/).
This allows for:

+ *Share*: copy and redistribute the material in any medium or format
+ *Adapt*: remix, transform, and build upon the material

for any purpose, even commercially.

The licensor cannot revoke these freedoms as long as you follow the license terms.

--- a/idris-tutorial.tex
+++ b/idris-tutorial.tex
@@ -39,6 +39,14 @@
 \begin{document}
 
 \maketitle%
+
+\begin{quote}
+\copyright~2014~by \href{http://www.idris-lang.org}{The Idris Community}\@.
+The Idris Tutorial is licensed under a \emph{Creative Commons Attribution-ShareAlike 4.0 International License}.
+To view a copy of this license, visit \url{http://creativecommons.org/licenses/by-sa/4.0/}.
+Based on a work at \url{https://github.com/idris-lang/idris-tutorial/}.
+\end{quote}
+
 \tableofcontents
 \newpage
 
