starting: Use the more diplomatic "GNU+Linux"
Signed-off-by: Alexander Berntsen <alexander@plaimi.net>

--- a/content/starting.tex
+++ b/content/starting.tex
@@ -9,7 +9,7 @@ You will need:
 \item A fairly recent Haskell platform. Version 2013.2.0.0
 should be sufficiently recent, though it is better to be completely up to
 date.
-\item The \emph{GNU Multiple Precision Arithmetic Library} (GMP) is available from MacPorts and all major Linux distributions.
+\item The \emph{GNU Multiple Precision Arithmetic Library} (GMP) is available from MacPorts and all major GNU+Linux distributions.
 \end{itemize}
 
 \subsection{Downloading and Installing}
